--- a/index.html
+++ b/index.html
@@ -8,6 +8,22 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  
+  <header class="header">
+    <div class="container header__container">
+      <button class="burger header__burger"><span></span></button>
+      <ul class="menu header__menu">
+        <li><a href="" class="menu__link">What we treat</a></li>
+        <li><a href="" class="menu__link">Manifesto</a></li>
+        <li><a href="" class="menu__link">Learn</a></li>
+        <li><a href="" class="menu__link">Reviews</a></li>
+      </ul>
+      <button class="btn btn-blue login header__login">Log In</button>
+    </div>
+  </header>
+  <main class="main">
+    
+  </main>
+
+  <script src="js/script.js"></script>
 </body>
 </html>
