--- a/index.html
+++ b/index.html
@@ -21,9 +21,69 @@
     </div>
   </header>
   <main class="main">
-    
+    <section class="hero">
+      <div class="container hero__container">
+        <div class="hero__main">
+          <h1 class="hero__title">Men’s health, delivered different</h1>
+          <p class="hero__description">Connect with Aussie doctors and get proven treatments prescribed online.</p>
+          <button class="btn btn-blue hero__btn">Take the quiz</button>
+        </div>
+        <div class="swiper hero__categories ">
+          <div class="swiper-wrapper hero__categories-body ">
+            <div class="hero__categories-slide swiper-slide">
+              <div class="hero__categories-item categories-item">
+                <h3 class="categories-item__title">Weight Loss</h3>
+                <img src="img/hero/categories-item-1.webp" alt="" class="categories-item__img">
+                <a href="" class="categories-item__link categories-item__link_green"><span>Learn more</span> <img src="img/arrow-right-cat.svg" alt=""></a>
+              </div>
+              <div class="hero__categories-item categories-item">
+                <h3 class="categories-item__title">Hair Loss</h3>
+                <img src="img/hero/categories-item-2.webp" alt="" class="categories-item__img">
+                <a href="" class="categories-item__link categories-item__link_red"><span>Learn more</span> <img src="img/arrow-right-cat.svg" alt=""></a>
+              </div>
+            </div>
+            <div class="hero__categories-slide swiper-slide">
+              <div class="hero__categories-item categories-item">
+                <h3 class="categories-item__title">Weight Loss</h3>
+                <img src="img/hero/categories-item-1.webp" alt="" class="categories-item__img">
+                <a href="" class="categories-item__link categories-item__link_green"><span>Learn more</span> <img src="img/arrow-right-cat.svg" alt=""></a>
+              </div>
+              <div class="hero__categories-item categories-item">
+                <h3 class="categories-item__title">Hair Loss</h3>
+                <img src="img/hero/categories-item-2.webp" alt="" class="categories-item__img">
+                <a href="" class="categories-item__link categories-item__link_red"><span>Learn more</span> <img src="img/arrow-right-cat.svg" alt=""></a>
+              </div>
+            </div>
+            <div class="hero__categories-slide swiper-slide">
+              <div class="hero__categories-item categories-item">
+                <h3 class="categories-item__title">Weight Loss</h3>
+                <img src="img/hero/categories-item-1.webp" alt="" class="categories-item__img">
+                <a href="" class="categories-item__link categories-item__link_green"><span>Learn more</span> <img src="img/arrow-right-cat.svg" alt=""></a>
+              </div>
+              <div class="hero__categories-item categories-item">
+                <h3 class="categories-item__title">Hair Loss</h3>
+                <img src="img/hero/categories-item-2.webp" alt="" class="categories-item__img">
+                <a href="" class="categories-item__link categories-item__link_red"><span>Learn more</span> <img src="img/arrow-right-cat.svg" alt=""></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="container">
+        <div class="swiper hero__footer">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide hero__footer-slide">Free shipping <br>on all plans</div>
+            <div class="swiper-slide hero__footer-slide">Free unlimited <br>follow-ups</div>
+            <div class="swiper-slide hero__footer-slide">Discreet, unmarked <br>packaging</div>
+            <div class="swiper-slide hero__footer-slide">Personalised treatment <br>for every patient</div>
+            <div class="swiper-slide hero__footer-slide">Developed by <br>specialists</div>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
 
+  <script src="js/swiper-bundle.min.js"></script>
   <script src="js/script.js"></script>
 </body>
 </html>
