--- a/index.html
+++ b/index.html
@@ -81,6 +81,44 @@
         </div>
       </div>
     </section>
+    <section class="steps">
+      <div class="container steps__container">
+        <div class="steps__header">
+          <div class="steps__header-wrapper">
+            <h2 class="steps__title">Helping men take healthcare into their own hands</h2>
+            <p class="steps__subtitle">Step by step.</p>
+          </div>
+        </div>
+        <div class="steps__cards">
+          <div class="steps__card card">
+            <div class="card__img">
+              <div class="card__number">1</div>
+              <img src="img/steps/steps-1.webp" alt="">
+            </div>
+            <h3 class="card__title">Online assessment</h3>
+            <p class="card__descrioption">Answer questions about your health online. An Aussie doctor will review your answers and recommend treatment.</p>
+          </div>
+
+          <div class="steps__card card">
+            <div class="card__img">
+              <div class="card__number">2</div>
+              <img src="img/steps/steps-2.webp" alt="">
+            </div>
+            <h3 class="card__title">Discreet, fast shipping</h3>
+            <p class="card__descrioption">All treatment plans are express shipped to your door in unmarked packaging.</p>
+          </div>
+
+          <div class="steps__card card">
+            <div class="card__img">
+              <div class="card__number">3</div>
+              <img src="img/steps/steps-3.webp" alt="">
+            </div>
+            <h3 class="card__title">Ongoing care</h3>
+            <p class="card__descrioption">Chat online with a Pilot doctor whenever you need. Get support or tweak your treatment as needed.</p>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
 
   <script src="js/swiper-bundle.min.js"></script>
