some fix and add big-img

--- a/index.html
+++ b/index.html
@@ -119,6 +119,11 @@
         </div>
       </div>
     </section>
+    <div class="big-img">
+      <div class="container">
+        <img src="img/big-img.jpg" alt="A happy old man in the garden">
+      </div>
+    </div>
   </main>
 
   <script src="js/swiper-bundle.min.js"></script>
