--- a/index.html
+++ b/index.html
@@ -124,6 +124,95 @@
         <img src="img/big-img.jpg" alt="A happy old man in the garden">
       </div>
     </div>
+    <section class="stories">
+      <div class="container stories__container">
+        <h2 class="stories__title">Success stories from Pilot patients</h2>
+        <div class="stories__rate rate">
+          <div class="rate__general">
+            <div class="rate__img">
+              <img src="img/stories-rate-logo.webp" alt="logo of the site productreview.com.au">
+            </div>
+            <span class="rate__mark">0</span><span class="rate__reviews">0</span>
+            reviews
+          </div>
+          <div class="rate__stars stars">
+            <div class="stars__item">
+              <div class="stars__mark"><span>5</span> stars</div>
+              <div class="stars__line"><span></span><div>0%</div></div>
+              <div class="stars__count">(<span>1067</span>)</div>
+            </div>
+            <div class="stars__item">
+              <div class="stars__mark"><span>4</span> stars</div>
+              <div class="stars__line"><span></span><div>0%</div></div>
+              <div class="stars__count">(<span>211</span>)</div>
+            </div>
+            <div class="stars__item">
+              <div class="stars__mark"><span>3</span> stars</div>
+              <div class="stars__line"><span></span><div>0%</div></div>
+              <div class="stars__count">(<span>39</span>)</div>
+            </div>
+            <div class="stars__item">
+              <div class="stars__mark"><span>2</span> stars</div>
+              <div class="stars__line"><span></span><div>0%</div></div>
+              <div class="stars__count">(<span>21</span>)</div>
+            </div>
+            <div class="stars__item">
+              <div class="stars__mark"><span>1</span> stars</div>
+              <div class="stars__line"><span></span><div>0%</div></div>
+              <div class="stars__count">(<span>68</span>)</div>
+            </div>
+          </div>
+        </div>
+        <div class="swiper stories__reviews">
+          <div class="stories__arrows">
+            <button class="stories__left">
+              <img src="img/arrow-right.svg" alt="">
+            </button>
+            <button class="stories__right">
+              <img src="img/arrow-right.svg" alt="">
+            </button>
+          </div>
+          <div class="swiper-wrapper">
+            <div class="swiper-slide review">
+              <h3 class="review__title">This is perfect</h3>
+              <p class="review__author">by <span>Mr Jones</span></p>
+              <p class="review__content">I get hard now and stay hard, intimate time last longer and my wife and I are a lot happier. I would recommend this to any man who has Ed and wants a easy fix both physically and mentally</p>
+              <div class="review__footer">
+                <p>Central West, NSW</p>
+                <p><img src="img/check.svg" alt=""> Non incentivised review</p>
+              </div>
+            </div>
+            <div class="swiper-slide review">
+              <h3 class="review__title">It’s like we’re teenagers again</h3>
+              <p class="review__author">by <span>Jodie</span></p>
+              <p class="review__content">We’ve been married for 22 years. I’d expected our sex life to dwindle over time, but I was starting to really miss our sex life. He found Pilot and now it’s like the spark has returned.</p>
+              <div class="review__footer">
+                <p>Central West, NSW</p>
+                <p><img src="img/check.svg" alt=""> Non incentivised review</p>
+              </div>
+            </div>
+            <div class="swiper-slide review">
+              <h3 class="review__title">We’re both so much happier</h3>
+              <p class="review__author">by <span>Mark</span></p>
+              <p class="review__content">I love my partner, but I could tell he was struggling with his confidence and I didn’t realise at first, but it was affecting mine too. We both feel so much sexier now and are blown away by the results.</p>
+              <div class="review__footer">
+                <p>Central West, NSW</p>
+                <p><img src="img/check.svg" alt=""> Non incentivised review</p>
+              </div>
+            </div>
+            <div class="swiper-slide review">
+              <h3 class="review__title">This is perfect</h3>
+              <p class="review__author">by <span>Mr Jones</span></p>
+              <p class="review__content">I get hard now and stay hard, intimate time last longer and my wife and I are a lot happier. I would recommend this to any man who has Ed and wants a easy fix both physically and mentally</p>
+              <div class="review__footer">
+                <p>Central West, NSW</p>
+                <p><img src="img/check.svg" alt=""> Non incentivised review</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
 
   <script src="js/swiper-bundle.min.js"></script>
