--- a/index.html
+++ b/index.html
@@ -213,6 +213,67 @@
         </div>
       </div>
     </section>
+    <section class="procedures">
+      <div class="container">
+        <h2 class="procedures__title">How Pilot can help you</h2>
+        <p class="procedures__description">Learn more about how modern medicine, science, and a team of trusted clinicians can help you level up your health.</p>
+        <div class="procedures__body">
+          <div class="procedures__main">
+            <div class="procedures__category category">
+              <button class="category__header">
+                <h3 class="category__title" aria-label="catbtn1">Sexual Health</h3>
+              </button>
+              <div class="category__body">
+                <p class="category__description">Confidential and discreet care for common conditions affecting the sex lives of Aussie men.</p>
+                <div class="category__items">
+                  <a href="">Premature Ejaculation</a>
+                  <a href="">Erectile Dysfunction</a>
+                  <a href="">Genital Herpes</a>
+                </div>
+              </div>
+            </div>
+            <div class="procedures__category category">
+              <button class="category__header">
+                <h3 class="category__title" aria-label="catbtn1">Weight Loss</h3>
+              </button>
+              <div class="category__body">
+                <p class="category__description">Breakthrough medication and accountability coaching resets to your metabolic health to help you lose weight, and keep it off for good.</p>
+                <div class="category__items">
+                  <a href="">Metabolic Reset</a>
+                </div>
+              </div>
+            </div>
+            <div class="procedures__category category">
+              <button class="category__header">
+                <h3 class="category__title" aria-label="catbtn1">Hair and Skin</h3>
+              </button>
+              <div class="category__body">
+                <p class="category__description">When we look good, we feel good too. Improve your confidence and stand taller with prescription treatments for your head and shoulders.</p>
+                <div class="category__items">
+                  <a href="">Hair Loss</a>
+                  <a href="">Acne</a>
+                </div>
+              </div>
+            </div>
+            <div class="procedures__category category">
+              <button class="category__header">
+                <h3 class="category__title" aria-label="catbtn1">Mind</h3>
+              </button>
+              <div class="category__body">
+                <p class="category__description">Sleep is for the strong. The same goes for looking after the mind. Find clinically proven sleep support and free confidential counselling.</p>
+                <div class="category__items">
+                  <a href="">Sleep</a>
+                  <a href="">Mental Health</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="procedures__side">
+            <img src="img/procedures-1.webp" alt="man's healthy sleep">
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
 
   <script src="js/swiper-bundle.min.js"></script>
