--- a/index.html
+++ b/index.html
@@ -274,6 +274,31 @@
         </div>
       </div>
     </section>
+    <section class="team">
+      <div class="container team__container">
+        <h2 class="team__title">Australian medical experts</h2>
+        <p class="team__description">Treatments designed by specialists, personalised to you. With a team of doctors all over the country.</p>
+        <div class="team__cards">
+          <a href="" class="team__card">
+            <div class="team__photo">
+              <img src="img/team-1.webp" alt="Dr Matthew Vickers">
+            </div>
+            <h3 class="team__card-name">Dr Matthew Vickers</h3>
+            <p class="team__card-position">Pilot Clinical Director</p>
+            <p class="team__card-branch">Sexual Health, Weight, Sleep</p>
+          </a>
+          <a href="" class="team__card">
+            <div class="team__photo">
+              <img src="img/team-2.webp" alt="Dr Matthew Vickers">
+            </div>
+            <h3 class="team__card-name">Dr Russell Knudsen</h3>
+            <p class="team__card-position">Hair Restoration Specialist</p>
+            <p class="team__card-branch">Hair Loss</p>
+          </a>
+        </div>
+        <a href="" class="btn team__all">Medical team</a>
+      </div>
+    </section>
   </main>
 
   <script src="js/swiper-bundle.min.js"></script>
