--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
           <div class="procedures__main">
             <div class="procedures__category category">
               <button class="category__header">
-                <h3 class="category__title" aria-label="catbtn1">Sexual Health</h3>
+                <h3 class="category__title">Sexual Health</h3>
               </button>
               <div class="category__body">
                 <p class="category__description">Confidential and discreet care for common conditions affecting the sex lives of Aussie men.</p>
@@ -234,7 +234,7 @@
             </div>
             <div class="procedures__category category">
               <button class="category__header">
-                <h3 class="category__title" aria-label="catbtn1">Weight Loss</h3>
+                <h3 class="category__title">Weight Loss</h3>
               </button>
               <div class="category__body">
                 <p class="category__description">Breakthrough medication and accountability coaching resets to your metabolic health to help you lose weight, and keep it off for good.</p>
@@ -245,7 +245,7 @@
             </div>
             <div class="procedures__category category">
               <button class="category__header">
-                <h3 class="category__title" aria-label="catbtn1">Hair and Skin</h3>
+                <h3 class="category__title">Hair and Skin</h3>
               </button>
               <div class="category__body">
                 <p class="category__description">When we look good, we feel good too. Improve your confidence and stand taller with prescription treatments for your head and shoulders.</p>
@@ -257,7 +257,7 @@
             </div>
             <div class="procedures__category category">
               <button class="category__header">
-                <h3 class="category__title" aria-label="catbtn1">Mind</h3>
+                <h3 class="category__title">Mind</h3>
               </button>
               <div class="category__body">
                 <p class="category__description">Sleep is for the strong. The same goes for looking after the mind. Find clinically proven sleep support and free confidential counselling.</p>
@@ -300,6 +300,7 @@
       </div>
     </section>
   </main>
+
 
   <script src="js/swiper-bundle.min.js"></script>
   <script src="js/script.js"></script>
