--- a/index.html
+++ b/index.html
@@ -299,6 +299,21 @@
         <a href="" class="btn team__all">Medical team</a>
       </div>
     </section>
+
+
+
+    <section class="levelup">
+      <div class="container levelup__container">
+        <div class="levelup__main">
+          <h2 class="levelup__title">Level up your health</h2>
+          <p class="levelup__description">You’re just a few questions away from a personalised recommendation.</p>
+          <a href="" class="levelup__btn btn btn-blue">Start consult</a>
+        </div>
+        <div class="levelup__img">
+          <img src="img/levelup-1.webp" alt="level up">
+        </div>
+      </div>
+    </section>
   </main>
 
 
