--- a/index.html
+++ b/index.html
@@ -315,6 +315,71 @@
       </div>
     </section>
   </main>
+  <footer class="footer">
+    <div class="container">
+      <div class="footer__main">
+        <div class="footer__flags">
+          <img src="img/footer/flags.webp" alt="flags">
+        </div>
+        <div class="footer__treat">
+          <div class="spoiler">
+            <button class="footer__title">
+              <h3 >What we treat</h3>
+            </button>
+            <ul class="footer__list">
+              <li><a href="" class="footer__link">Erectile Dysfunction</a></li>
+              <li><a href="" class="footer__link">Premature Ejaculation</a></li>
+              <li><a href="" class="footer__link">Hair Loss</a></li>
+              <li><a href="" class="footer__link">Weight Loss</a></li>
+              <li><a href="" class="footer__link">Sleep</a></li>
+              <li><a href="" class="footer__link">Skin</a></li>
+              <li><a href="" class="footer__link">Mental Health</a></li>
+              <li><a href="" class="footer__link">Herpes</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="footer__about">
+          <div class="spoiler">
+            <button class="footer__title">
+              <h3>About</h3>
+            </button>
+            <ul class="footer__list">
+              <li><a href="" class="footer__link">Manifesto</a></li>
+              <li><a href="" class="footer__link">Medical Team</a></li>
+              <li><a href="" class="footer__link">Reviews</a></li>
+            </ul>
+          </div>
+          <div class="spoiler">
+            <button class="footer__title">
+              <h3>Support</h3>
+            </button>
+            <ul class="footer__list">
+              <li><a href="" class="footer__link">Contact Us</a></li>
+              <li><a href="" class="footer__link">Help Centre</a></li>
+              <li><a href="" class="footer__link">FAQ</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="footer__supported">
+          <p>Proud supporter of</p>
+          <img src="img/footer/supported-1.webp" alt="">
+          <img src="img/footer/supported-2.webp" alt="">
+          <img src="img/footer/supported-3.webp" alt="">
+        </div>
+      </div>
+      <ul class="footer__bottom">
+        <li>
+          <a href="">Privacy Policy</a>
+        </li>
+        <li>
+          <a href="">Terms & Conditions</a>
+        </li>
+        <li>
+          <a href="">Fulfilment, shipping & Returns Policy</a>
+        </li>
+      </ul>
+    </div>
+  </footer>
 
 
   <script src="js/swiper-bundle.min.js"></script>
